--- a/src/components/wishlist.css
+++ b/src/components/wishlist.css
@@ -1,25 +1,4 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  color: #fff;
-  font-family: sans-serif;
-  font-size: 1.6rem;
-}
-
-.row {
+.w-row {
   max-width: 70rem;
   margin: 0 auto;
 }
@@ -30,110 +9,118 @@ body {
   }
 }
 @media only screen and (max-width: 700px) {
-  .card {
+  .w-card {
     flex-direction: column;
     width: 50%;
     margin: 0 auto;
   }
-  .card__img {
+  .w-card__img {
     height: 35rem;
     margin: 2rem 0rem 2rem 0rem;
     border-radius: 0 !important;
   }
-  .card__left-side {
+  .w-card__left-side {
     justify-content: center;
     flex: 0 0 100%;
     padding: 0;
   }
-  .card__right-side {
+  .w-card__right-side {
     align-items: center;
     display: flex;
     flex-direction: row;
     padding: 10px;
   }
-  .card__input {
+  .w-card__input {
     margin-bottom: 1rem;
     width: 80%;
   }
-  .card__box {
+  .w-card__box {
     margin-bottom: 5rem;
     width: 80%;
     margin: 0;
   }
-  .card__title {
+  .w-card__title {
     width: 80%;
     margin: 0 auto;
   }
-  .card__text {
+  .w-card__text {
     margin-bottom: 2rem;
     width: 80%;
     margin: 0 auto;
   }
-  .card__form {
+  .w-card__form {
     width: 80%;
     margin: 0 auto;
   }
 }
 .section-subscribe {
-  background: #393940;
   padding: 10rem;
   height: 100%;
 }
 
-.card {
-  box-shadow: 2rem 2rem 10rem 0.5rem rgba(0, 0, 0, 0.25);
+.w-card {
   background: #393940;
   display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 40%;
+  height: 230px;
   flex-direction: row;
   border-radius: 1rem;
 }
-.card__left-side {
-  flex: 0 0 30%;
+.w-card__left-side {
+  flex: 0 0 45%;
   display: flex;
   padding: 0.7rem;
 }
-.card__right-side {
+.w-card__right-side {
   flex: 1;
   padding: 0 5rem 0 2rem;
-  margin-left: 200px;
+  margin-left: 250px;
   margin-top: -300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.card__img {
-  display: block;
+.w-card__img {
+  height: auto;
   border-radius: 1rem 0rem 0rem 1rem;
   overflow: hidden;
 }
-.card__title {
-  margin-bottom: 2rem;
+.w-card__title {
+  margin-top: 300px;
+  margin-left: -350px;
   opacity: 0.9;
+  color: aliceblue;
 }
-.card__text {
-  margin-bottom: 2rem;
+.w-card__text {
   opacity: 0.8;
   line-height: 1.5;
+  margin-left: -350px;
+  color: aliceblue;
 }
-.card__input {
+.w-card__input {
   color: white;
   background: #393940;
+  margin-left: -350px;
   padding: 1rem 1rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
   border-radius: 0.5rem;
   border: solid 1px rgba(255, 255, 255, 0.34);
 }
-.card__input:focus {
+.w-card__input:focus {
   outline: none;
 }
-.card__button {
-  padding: 1rem 2rem;
+.w-card__button {
+  padding: 10px;
+  margin-top: 50px;
   border-radius: 0.5rem;
+  margin-left: -350px;
   border: none;
   background: #93C814;
 }
 
-.box {
+.w-box {
   margin: 0 auto;
-}
+} 
