--- a/src/components/products.css
+++ b/src/components/products.css
@@ -10,32 +10,32 @@ body {
 #wrap{
 	width: 90%;
 	max-width: 1100px;
-	margin: 50px auto;
+	margin: 50px;
 }
 .columns_2 figure{
-   width:49%;
-   margin-right:1%;
+  width:49%;
+  margin-right:1%;
 }
 .columns_2 figure:nth-child(2){
 	margin-right: 0;
 }
 .columns_3 figure{
-   width:32%;
-   margin-right:1%;
+  width:32%;
+  margin-right:1%;
 }
 .columns_3 figure:nth-child(3){
 	margin-right: 0;
 }
 .columns_4 figure{
-   width:24%;
-   margin-right:1%;
+  width:24%;
+  margin-right:1%;
 }
 .columns_4 figure:nth-child(4){
 	margin-right: 0;
 }
 .columns_5 figure{
-   width:19%;
-   margin-right:1%;
+  width:19%;
+  margin-right:1%;
 }
 .columns_5 figure:nth-child(5){
 	margin-right: 0;
@@ -54,7 +54,8 @@ div#columns figure {
 	background: #FEFEFE;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 0px 15px;
+  width: 17em;
+	margin: 0 5px 15px;
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
 	padding: 15px;
