--- a/src/components/products.css
+++ b/src/components/products.css
@@ -42,7 +42,7 @@ body {
 .columns_5 figure:nth-child(5){
 	margin-right: 0;
 }
-#columns figure:hover{
+/* #columns figure:hover{
 	-webkit-transform: scale(1.1);
 	-moz-transform:scale(1.1);
 	transform: scale(1.1);
@@ -50,7 +50,7 @@ body {
 }
 #columns:hover figure:not(:hover) {
 	opacity: 0.4;
-}
+} */
 div#columns figure {
 	display: inline-block;
 	background: #FEFEFE;
