--- a/src/components/wishlist.css
+++ b/src/components/wishlist.css
@@ -1,4 +1,4 @@
-.w-row {
+/* .w-row {
   max-width: 70rem;
   margin: 0 auto;
 }
@@ -123,4 +123,36 @@
 
 .w-box {
   margin: 0 auto;
-} 
+}  */
+
+/* * {
+  box-sizing: border-box;
+} */
+body {
+  max-width: 10000px;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+}
+
+.flex-item {
+  background-color: #f1f1f1;
+  padding: 10px;
+  flex: 30%;
+  margin-top: 20px;
+}
+
+@media (max-width: 1000px) {
+  .flex-item {
+    flex: 50%;
+  }
+}
+
+@media (max-width: 800px) {
+  .flex-item {
+    flex: 100%;
+  }
+}
