--- a/src/components/admin/allProducts.css
+++ b/src/components/admin/allProducts.css
@@ -20,6 +20,7 @@
   flex: 0.9;
   background: rgba(100,100,100, 0.5);
   text-align: left;
+  color: black;
   max-height: 170px;
   margin: 5px;
   padding: 10px;
