--- a/src/components/admin/inventory/inventory.css
+++ b/src/components/admin/inventory/inventory.css
@@ -1,13 +1,12 @@
 table {
   margin: 2rem;
+  border-collapse: collapse;
   width: 90%;
   caption-side: bottom;
 }
 
 th, td {
-  border: 1px solid #333;
-}
-
-html {
-  font-size: 24px;
+  border: 1px solid #dddddd;
+  font-size: 14px;
+  padding: 5px;
 }
