--- a/src/components/addToCartPopUp.css
+++ b/src/components/addToCartPopUp.css
@@ -1,52 +1,38 @@
-/* .dropbtn {
-  background-color: #1F45A3;
-  color: #ffffff;
-  padding: 10px;
-  font-size: 1em;
-  border: none;
-  cursor: pointer;
-  font-family: sans-serif;
-  width: 100%;
-  min-width: 130px;
-  border-radius: 2px;
-} */
-/* .dropbtn:hover,
-.dropbtn:focus {
-  background-color: #0334ad;
-} */
-
-.dropdown {
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
   position: relative;
-  /* display: inline-block; */
+  transition: all 2s ease-in-out;
 }
-
-.dropdown-content {
-  display: none;
+.popup .close {
   position: absolute;
-  background-color: #ffffff;
-  border-top-left-radius: 2px;
-  border-top-right-radius: 2px;
-  border-bottom: 4px solid #1F45A3;
-  min-width: 220px;
-  box-shadow: 0px 2px 20px 0px rgba(31, 69, 163, 0.25);
-  padding: 3px;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
 }
-.whr-drop-main {
-  width: 100%;
-  /* float: left; */
-  margin-top: 3%;
-  margin-bottom: 5%;
-}
-/* .whr-used-drop {
-  float: left;
-} */
-
-.whr-used-drop-lbl {
-  font-family: sans-serif;
-  font-size: 1em;
-  color: #3D3D3D;
-}
-
-.whr-drop-hide {
-  display: block;
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
 }
