--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,34 +1,3 @@
-/* 
-.col-main {
-  flex: 1;  
-}  
-
-.col-complementary {
-  flex: 1;  
-}
-
-.left {
-  float:left 
-}  
-
-@media only screen and (min-width: 640px) {
-  .layout {
-    display: flex;
-  }
-}
-
-.container {
-  max-width: 50em;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.col {
-  max-width: 30em;
-  padding: 1em;
-  margin: 0 2px 2px 0;
-} */
-
 .order {
   margin-left: 60%;
   top: 20%;
@@ -49,12 +18,12 @@
 }
  
 div.cartprod {
-  margin-top: 10%;
+  margin-top: 7%;
   margin-left: 10%;
   width: 40%;
   padding: 1px 16px;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1370px) {
