--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,47 +1,44 @@
-.order {
-  margin-left: 60%;
-  top: 20%;
-  padding: 0;
-  width: 350px;
-  background-color: #f1f1f1;
-  position: fixed;
-  height: 70%;
-  overflow: hidden;
-}
-
-.order a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
+/* .order {
+  margin-top: -20%;
+  width: 300px
+} */
  
-div.cartprod {
-  margin-top: 7%;
+.cart-container {
+  display: flex;
+  flex-direction: row;
   margin-left: 10%;
-  width: 40%;
-  padding: 1px 16px;
-  height: 100%;
-  overflow: hidden;
+  max-width: 500px;
+  margin-top: 20px;
 }
 
-@media screen and (max-width: 1370px) {
-  .order {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .order a {float: none;}
-  div.cartprod {margin-left: 0;}
+.cart-left {
+  background-color: #DAF7A6;
+  padding: 10px;
+  flex: 50%;
 }
 
-@media screen and (max-width: 1370px) {
+.cart-right {
+  background-color: #DAF7A6;
+  padding: 10px;
+  flex: 50%;
+}
+
+@media screen and (max-width: 2000px) {
   .order {
-    margin-left: 10%;
-    width: 80%;
-    text-align: center;
-    float: none;
+    margin-left: 60%;
+    margin-top: -20%;
   }
-  div.cartprod {margin-left: 10%; width: 80%;}
+}
+
+@media screen and (max-width: 1000px) {
+  .order {
+    margin-top: 10%;
+    margin-left: 8%; 
+  }
+}
+
+@media (max-width: 400px) {
+  .cart-container {
+    flex-direction: column;
+  }
 }
