--- a/src/components/savedAddresses.css
+++ b/src/components/savedAddresses.css
@@ -1,10 +1,3 @@
-.addresses {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 17px;
-  text-align: left;
-}
-
 .data {
   background-color: #f1f1f1;
   list-style-type: none;
@@ -12,5 +5,5 @@
   height: 115px;
   flex: 100%;
   margin-top: 1%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
