toast notification and payment successful page done

--- a/src/components/productDetail.css
+++ b/src/components/productDetail.css
@@ -103,7 +103,7 @@
   color: #fff;
 }
 .purchase-info .btn:first-of-type{
-  background: #256eff;
+  background: #5d90f8;
 }
 .purchase-info .btn:last-of-type{
   background: #f64749;
