--- a/src/components/products.css
+++ b/src/components/products.css
@@ -3,6 +3,11 @@
   -moz-box-sizing:border-box;
 }
 
+.body {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 #wrap{
 	width: 90%;
 	max-width: 1100px;
@@ -43,7 +48,7 @@ div#columns figure {
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
   width: 17em;
-	margin: 0 5px 15px;
+	margin: 10px 10px 15px;
 	-webkit-column-break-inside: avoid;
 	-moz-column-break-inside: avoid;
 	padding: 15px;
@@ -83,18 +88,21 @@ div#columns figure figcaption {
   #columns figure { width: 24%; }
   .body {
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 @media screen and (max-width: 767px) {
   #columns figure { width:32%;}
   .body {
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 @media screen and (max-width: 600px) {
   #columns figure { width: 49%;}
   .body {
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 @media screen and (max-width: 500px) {
@@ -104,5 +112,6 @@ div#columns figure figcaption {
   }
   .body {
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
