--- a/src/components/products.css
+++ b/src/components/products.css
@@ -44,7 +44,7 @@
 
 div#columns figure {
 	display: inline-block;
-	background: #FEFEFE;
+	background: #FEFEFE ;
 	border: 2px solid #FAFAFA;
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
   width: 17em;
@@ -53,7 +53,7 @@ div#columns figure {
 	-moz-column-break-inside: avoid;
 	padding: 15px;
 	padding-bottom: 5px;
-	background: -webkit-linear-gradient(45deg, #FFF, #F9F9F9);
+	background: /* -webkit-linear-gradient(45deg, #FFF, #F9F9F9) */ rgb(252, 255, 211);
 	opacity: 1;
 	-webkit-transition: all .3s ease;
 	-moz-transition: all .3s ease;
