--- a/src/components/wishlist.css
+++ b/src/components/wishlist.css
@@ -12,10 +12,23 @@ body {
 }
 
 .flex-item {
-  background-color: rgba(53, 50, 36, 0.02);
+  background-color: /* rgba(53, 50, 36, 0.02) */ rgb(252, 255, 211);
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
   padding: 10px;
   margin-top: 20px;
   margin-left: 20px;
+}
+
+.cart-button {
+  cursor: pointer;
+  height: 2rem;
+  width: 12.5rem;
+  border-radius: 3px;
+  background-color: #bdf;
+}
+
+.cart-button:hover {
+  background-color: rgb(123, 191, 255);
 }
 
 @media (max-width: 800px) {
