--- a/src/components/forgotPassword.css
+++ b/src/components/forgotPassword.css
@@ -1,10 +1,10 @@
 .forgot {
-  background-color: rgba(20, 120, 200, 0.6);
-  color: #fff;
+  background-color: /* rgba(20, 120, 200, 0.6) */ #bdf;
+  /* color: #fff; */
   text-align: center;
   padding: 2em 2em 0.5em;
   width: 90%;
-  margin: 2em	auto;
+  margin: 13em	auto;
   border-radius: 5px; }
   .forgot h1 {
     font-size: 2.5em; }
@@ -12,7 +12,7 @@
     margin: 0.5em 0; }
     .forgot .form-group label {
       display: block;
-      color: #fff;
+      /* color: #fff; */
       text-align: left;
       font-weight: 600; }
     .forgot .form-group input, .forgot .form-group button {
@@ -24,10 +24,10 @@
       background-color: inherit;
       border: none;
       border-bottom: 1px solid #555;
-      color: #eee; }
+      /* color: #eee; */ }
       .forgot .form-group input:focus, .forgot .form-group button:focus {
         background-color: #fff;
-        color: #000;
+       /*  color: #000; */
         border: none;
         padding: 1em 0.5em; animation: pulse 1s infinite ease;}
     .forgot .form-group button {
@@ -36,7 +36,7 @@
       outline: none;
       -moz-user-select: none;
       user-select: none;
-      color: #333;
+      /* color: #333; */
       font-weight: 800;
       cursor: pointer;
       margin-top: 2em;
@@ -65,7 +65,7 @@
     text-decoration: none; }
 
 .information-text {
-  color: #ddd; }
+  /* color: #ddd; */ }
 
 @media screen and (max-width: 320px) {
   .forgot {
