--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
-  margin-left: 10%;
+  margin-left: 30%;
   max-width: 500px;
   margin-top: 3%;
 }
@@ -37,7 +37,7 @@
     margin-left: 10%;
     width: 80%;
     margin-top: 5%;
-    background-color: rgb(157, 229, 187); 
+    background-color: rgba(170, 170, 170, 0.322); 
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
   }
 }
@@ -48,11 +48,15 @@
     margin-left: 10%; 
     width: 90%;
   }
+  .cart-container {
+    margin-left: 10%;
+  }
 }
 
 @media (max-width: 400px) {
   .cart-container {
     flex-direction: column;
+    margin-left: 10%;
   }
   .order {
     margin-left: 10%;
