--- a/src/components/products.css
+++ b/src/components/products.css
@@ -13,32 +13,12 @@
 	max-width: 1100px;
 	margin: 50px;
 }
-.columns_2 figure{
-  width:49%;
-  margin-right:1%;
-}
-.columns_2 figure:nth-child(2){
-	margin-right: 0;
-}
-.columns_3 figure{
-  width:32%;
-  margin-right:1%;
-}
-.columns_3 figure:nth-child(3){
-	margin-right: 0;
-}
+
 .columns_4 figure{
   width:24%;
   margin-right:1%;
 }
 .columns_4 figure:nth-child(4){
-	margin-right: 0;
-}
-.columns_5 figure{
-  width:19%;
-  margin-right:1%;
-}
-.columns_5 figure:nth-child(5){
 	margin-right: 0;
 }
 
@@ -49,16 +29,9 @@ div#columns figure {
 	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
   width: 17em;
 	margin: 10px 10px 15px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
 	padding: 15px;
 	padding-bottom: 5px;
-	background: /* -webkit-linear-gradient(45deg, #FFF, #F9F9F9) */ rgb(252, 255, 211);
-	opacity: 1;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	transition: all .3s ease;
+	background: rgb(252, 255, 211);
 }
 
 div#columns figure img {
@@ -78,12 +51,6 @@ div#columns figure figcaption {
   text-overflow:ellipsis;
 }
 
-.made_by{
-  font-weight: 400;
-  font-size: 13px;
-  margin-top: 35px;
-  text-align: center;
-}
 @media screen and (max-width: 960px) { 
   #columns figure { width: 24%; }
   .body {
